--- a/app/views/residents/index.html.erb
+++ b/app/views/residents/index.html.erb
@@ -1,7 +1,7 @@
 <h1>All Residents</h1>
 
 <% @residents.each do |resident| %>
-  <h3><a href="/disaster_shelters/<%= resident.id %>"><%= resident.family_name %></a></h3>
+  <h3><a href="/residents/<%= resident.id %>"><%= resident.family_name %></a></h3>
   <p>Long Term Housing Needed: <%=resident.long_term_housing_need%></p>
   <p>Family Size: <%=resident.family_size%></p>
   <p>Current Shelter ID: <%=resident.disaster_shelters_id%></p>
