--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Welcome to the Disaster Shelter Database</h1>
 
 <ul>
-  <li><a href="/disaster_shelters">Disaster Shelters</a></li>
+  <li><a href="/shelters">Disaster Shelters</a></li>
   <li><a href="/residents">Resident List</a></li>
 
 </ul>
