--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -1,7 +1,8 @@
+
 <h1>All Disaster Shelters</h1>
 
 <% @shelters.each do |shelter| %>
-  <h3><a href="/shelters/<%= shelter.id %>"><%= shelter.shelter_name %></a></h3>
+  <h3><a href="/shelters/<%= shelter.id %>"><%= shelter.shelter_name %></a>    <%=shelter.created_at%></h3>
 
 <% end %>
 
