feat: add link to resident page on each page

--- a/app/views/residents/index.html.erb
+++ b/app/views/residents/index.html.erb
@@ -1,4 +1,9 @@
+<body>
+<h11><a href="/residents">List of All Residents</a></h11>
+
+<header>
 <h1>All Residents</h1>
+</header>
 
 <% @residents.each do |resident| %>
   <h3><a href="/residents/<%= resident.id %>"><%= resident.family_name %></a></h3>
@@ -6,3 +11,7 @@
   <p>Family Size: <%=resident.family_size%></p>
   <p>Current Shelter ID: <%=resident.shelter_id%></p>
 <% end %>
+
+</body>
+
+
