--- a/app/views/residents/show.html.erb
+++ b/app/views/residents/show.html.erb
@@ -1,4 +1,9 @@
+<body>
+<h11><a href="/residents">List of All Residents</a></h11>
+
 <h1><%= @resident.family_name %></h1>
 <p>Long Term Housing Need: <%=@resident.long_term_housing_need %></p>
 <p>Family Size: <%=@resident.family_size %></p>
 <p>Current Disaster Shelter ID: <%=@resident.shelter_id %></p>
+
+</body>
