--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -1,9 +1,13 @@
+<body>
+<h11><a href="/residents">List of All Residents</a></h11>
 
+<header>
 <h1>All Disaster Shelters</h1>
+</header>
 
 <% @shelters.each do |shelter| %>
   <h3><a href="/shelters/<%= shelter.id %>"><%= shelter.shelter_name %></a>    <%=shelter.created_at%></h3>
-
 <% end %>
+</body>
 
 
