--- a/app/views/shelters/resident_view.html.erb
+++ b/app/views/shelters/resident_view.html.erb
@@ -1,3 +1,6 @@
+<body>
+<h11><a href="/residents">List of All Residents</a></h11>
+
 <h1><%=@shelter.shelter_name%> Residents</h1>
 
 <% @residents.each do |resident| %>
@@ -6,3 +9,5 @@
   <p>Family Size: <%=resident.family_size%></p>
   <p>Current Shelter ID: <%=resident.shelter_id%></p>
 <% end %>
+
+</body>
