--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -1,6 +1,11 @@
+<body>
+<h11><a href="/residents">List of All Residents</a></h11>
+
 <h1><%= @shelter.shelter_name %></h1>
 <p>Shelter Address: <%=@shelter.address %></p>
 <p>Case Management Available: <%=@shelter.case_management_available %></p>
 <p>Capasity: <%=@shelter.capasity %></p>
 <p>Current Resident Count: <%=@shelter.residents.count%>
 <p><a href="/shelters/<%= @shelter.id %>/residents">Residents</a></p>
+
+</body>
