feat: user story 9 added, updated views and testing

--- a/app/views/residents/show.html.erb
+++ b/app/views/residents/show.html.erb
@@ -1,5 +1,6 @@
 <body>
-<h11><a href="/residents">List of All Residents</a></h11>
+<p><h11><a href="/shelters">Shelter List</a></h11></p>
+<p><h11><a href="/residents">List of All Residents</a></h11></p>
 
 <h1><%= @resident.family_name %></h1>
 <p>Long Term Housing Need: <%=@resident.long_term_housing_need %></p>
