--- a/app/views/shelters/resident_view.html.erb
+++ b/app/views/shelters/resident_view.html.erb
@@ -1,5 +1,6 @@
 <body>
-<h11><a href="/residents">List of All Residents</a></h11>
+<p><h11><a href="/shelters">Shelter List</a></h11></p>
+<p><h11><a href="/residents">List of All Residents</a></h11></p>
 
 <h1><%=@shelter.shelter_name%> Residents</h1>
 
