--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -1,5 +1,6 @@
 <body>
-<h11><a href="/residents">List of All Residents</a></h11>
+<p><h11><a href="/shelters">Shelter List</a></h11></p>
+<p><h11><a href="/residents">List of All Residents</a></h11></p>
 
 <header>
 <h1>All Disaster Shelters</h1>
