feat: user story 12, ability to edit shelter record

--- a/app/views/shelters/new.html.erb
+++ b/app/views/shelters/new.html.erb
@@ -4,7 +4,7 @@
 <p>Shelter Name</p>
 <input type='text' name='shelter_name'/><br/>
 <p>Address</p>
-<input type='text' name='address'/><br/>
+<textarea name='address'></textarea><br/>
 <p>Is Case Management Available?</p>
 <input list="case_management_available">
 <datalist id="case_management_available">
