feat: user story 13 testing and features

--- a/app/views/shelter_residents/index.html.erb
+++ b/app/views/shelter_residents/index.html.erb
@@ -11,4 +11,7 @@
   <p>Current Shelter ID: <%=resident.shelter_id%></p>
 <% end %>
 
+<p><h5><a href="/shelters/<%= @shelter.id %>/residents/new">Add New Associated Resident</a></h5></p>
+
+
 </body>
