--- a/app/views/shelters/new.html.erb
+++ b/app/views/shelters/new.html.erb
@@ -6,15 +6,11 @@
 <p>Address</p>
 <textarea name='address'></textarea><br/>
 <p>Is Case Management Available?</p>
-<input list="case_management_available">
-<datalist id="case_management_available">
-  <option value="true">
-  <option value="false">
-</datalist>
+<input type='text' name='case_management_available'/><br/>
+
 <p>Capasity</p>
 <input type='text' name='capasity'/><br/>
 <input type='submit'/>
 </form>
 
 
-</datalist>
