feat: added feature user story 14 and testing

--- a/app/views/residents/show.html.erb
+++ b/app/views/residents/show.html.erb
@@ -7,4 +7,7 @@
 <p>Family Size: <%=@resident.family_size %></p>
 <p>Current Disaster Shelter ID: <%=@resident.shelter_id %></p>
 
+<a href="/residents/<%= @resident.id %>/edit">Edit Resident Information</a>
+
+
 </body>
