--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -7,7 +7,11 @@
 </header>
 
 <% @shelters.each do |shelter| %>
-  <h3><a href="/shelters/<%= shelter.id %>"><%= shelter.shelter_name %></a>    <%=shelter.created_at%></h3>
+  <h3>
+  <a href="/shelters/<%= shelter.id %>"><%= shelter.shelter_name %></a>  
+  <%= shelter.created_at %> 
+  <a href="/shelters/<%= shelter.id %>/edit">Edit Shelter Record</a>
+  </h3>
   <% end %>
   
   <p><h5><a href="/shelters/new">Add New Shelter</a></h5></p>
