--- a/app/views/shelter_residents/index.html.erb
+++ b/app/views/shelter_residents/index.html.erb
@@ -6,7 +6,9 @@
 <p><h5><a href="/shelters/<%= @shelter.id %>/residents/sorted_a">Sort List Alphabetically</a></h5></p>
 
 <% @residents.each do |resident| %>
-  <h3><a href="/residents/<%= resident.id %>"><%= resident.family_name %></a></h3>
+  <h3><a href="/residents/<%= resident.id %>"><%= resident.family_name %></a>
+  <a href="/residents/<%= resident.id %>/edit">Edit Resident Record</a>
+  </h3>
   <p>Long Term Housing Needed: <%=resident.long_term_housing_need%></p>
   <p>Family Size: <%=resident.family_size%></p>
   <p>Current Shelter ID: <%=resident.shelter_id%></p>
