--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -9,6 +9,12 @@
 <p>Current Resident Count: <%=@shelter.residents.count%></p>
 
 <a href="/shelters/<%= @shelter.id %>/edit">Update Shelter Record</a>
+<form action="/shelters/<%= @shelter.id %>" method="POST">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <input type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="delete"/>
+</form>
+
 <p><a href="/shelters/<%= @shelter.id %>/residents">Current Residents At This Shelter</a></p>
 
 </body>
