--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -11,7 +11,12 @@
   <a href="/shelters/<%= shelter.id %>"><%= shelter.shelter_name %></a>  
   <%= shelter.created_at %> 
   <a href="/shelters/<%= shelter.id %>/edit">Edit Shelter Record</a>
-  </h3>
+    <form action="/shelters/<%= shelter.id %>" method="POST">
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+    <input type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="delete"/>
+    </form>
+    </h3>
   <% end %>
   
   <p><h5><a href="/shelters/new">Add New Shelter</a></h5></p>
