feat:user stories

--- a/app/views/shelter_residents/index.html.erb
+++ b/app/views/shelter_residents/index.html.erb
@@ -10,7 +10,7 @@
     <p>Filter by Family Size</p>
     <p>Family Size</p>
     <input type='number' name='family_size'/><br/>
-    <input type='submit'/>
+    <input type='submit' value='submit'/>
     </form>
     
 
