--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="mystyle.css"
 <h1>Welcome to the Disaster Shelter Database</h1>
+</head>
+<body>
 
 <ul>
   <li><a href="/shelters">Disaster Shelters</a></li>
   <li><a href="/residents">Resident List</a></li>
 
 </ul>
+
+</body>
+</html>
