update correct html syntax on welcome and shelter page with CSS

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,11 +6,9 @@
 </head>
 <body>
 
-<ul>
-  <li><a href="/shelters">Disaster Shelters</a></li>
-  <li><a href="/residents">Resident List</a></li>
+  <p><li><a href="/shelters">Disaster Shelters</a></li></p>
+  <p><li><a href="/residents">Resident List</a></li></p>
 
-</ul>
 
 </body>
 </html>
