--- a/app/assets/stylesheets/mystyle.css
+++ b/app/assets/stylesheets/mystyle.css
@@ -5,3 +5,12 @@ body {
   font-size: 20px;
 }
 
+.header-links ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.header-links li {
+  display: inline
+}
