--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -1,13 +1,21 @@
-<body>
-<p><h11><a href="/shelters">Shelter List</a></h11></p>
-<p><h11><a href="/residents">List of All Residents</a></h11></p>
+<!DOCTYPE html>
+<html>
+<head>
+
+<div class="header-links"
+  <ul>
+    <li><a href="/">Welcome Page</a><li>
+    <li><a href="/shelters">Shelter List</a><li>
+    <li><a href="/residents">List of All Residents</a></li>
+  </ul>
+</div>
 
 <header>
 <h1>All Disaster Shelters</h1>
 </header>
 
 <% @shelters.each do |shelter| %>
-  <h3>
+<h3>
   <a href="/shelters/<%= shelter.id %>"><%= shelter.shelter_name %></a>  
   <%= shelter.created_at %> 
   <a href="/shelters/<%= shelter.id %>/edit">Edit Shelter Record</a>
