user story 2 check and update testing

--- a/app/assets/stylesheets/mystyle.css
+++ b/app/assets/stylesheets/mystyle.css
@@ -5,12 +5,12 @@ body {
   font-size: 20px;
 }
 
-.header-links ul {
+ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-.header-links li {
+li {
   display: inline
 }
