--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="mystyle.css"
 
-<div class="header-links"
   <ul>
     <li><a href="/">Welcome Page</a><li>
     <li><a href="/shelters">Shelter List</a><li>
     <li><a href="/residents">List of All Residents</a></li>
   </ul>
-</div>
 
 <header>
 <h1>All Disaster Shelters</h1>
 </header>
+</head>
+
+<body>
 
 <% @shelters.each do |shelter| %>
 <h3>
@@ -29,5 +31,6 @@
   
   <p><h5><a href="/shelters/new">Add New Shelter</a></h5></p>
 </body>
+</html>
 
 
