--- a/app/views/residents/index.html.erb
+++ b/app/views/residents/index.html.erb
@@ -1,12 +1,19 @@
-<body>
-<p><h11><a href="/shelters">Shelter List</a></h11></p>
-<p><h11><a href="/residents">List of All Residents</a></h11></p>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="mystyle.css"
 
-
+<ul>
+<li><a href="/">Welcome Page</a><li>
+<li><a href="/shelters">Shelter List</a><li>
+<li><a href="/residents">List of All Residents</a></li>
+</ul>
 <header>
 <h1>All Residents</h1>
 </header>
+</head>
 
+<body>
 <% @residents.each do |resident| %>
   <h3><a href="/residents/<%= resident.id %>"><%= resident.family_name %></a>
   <a href="/residents/<%= resident.id %>/edit">Edit Resident Record</a>
@@ -22,5 +29,6 @@
 <% end %>
 
 </body>
+</html>
 
 
