--- a/app/views/shelter_residents/index.html.erb
+++ b/app/views/shelter_residents/index.html.erb
@@ -1,6 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="mystyle.css"
+
+<ul>
+<li><a href="/">Welcome Page</a><li>
+<li><a href="/shelters">Shelter List</a><li>
+<li><a href="/residents">List of All Residents</a></li>
+</ul>
+
 <body>
-  <p><h11><a href="/shelters">Shelter List</a></h11></p>
-  <p><h11><a href="/residents">List of All Residents</a></h11></p>
+
 
   <h1><%=@shelter.shelter_name%> Residents</h1>
     <p><h5><a href="/shelters/<%= @shelter.id %>/residents/sorted_a">Sort List Alphabetically</a></h5></p>
@@ -35,3 +45,4 @@
 
 
 </body>
+</html>
