testing and review of user story 6

--- a/app/assets/stylesheets/mystyle.css
+++ b/app/assets/stylesheets/mystyle.css
@@ -5,6 +5,10 @@ body {
   font-size: 20px;
 }
 
+h1 {
+  text-align: center;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -14,3 +18,4 @@ ul {
 li {
   display: inline
 }
+
