--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -17,17 +17,17 @@
 <body>
 
 <% @shelters.each do |shelter| %>
-<h3>
+  <h3>
   <a href="/shelters/<%= shelter.id %>"><%= shelter.shelter_name %></a>  
-  <%= shelter.created_at %> 
+  <a ><%= shelter.created_at %></a> 
   <a href="/shelters/<%= shelter.id %>/edit">Edit Shelter Record</a>
     <form action="/shelters/<%= shelter.id %>" method="POST">
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
     <input type="hidden" name="_method" value="DELETE">
     <input type="submit" value="delete"/>
     </form>
-    </h3>
-  <% end %>
+  </h3>
+<% end %>
   
   <p><h5><a href="/shelters/new">Add New Shelter</a></h5></p>
 </body>
