--- a/app/views/shelter_residents/by_family_view.html.erb
+++ b/app/views/shelter_residents/by_family_view.html.erb
@@ -1,4 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="mystyle.css"
+
+  <ul>
+    <li><a href="/">Welcome Page</a><li>
+    <li><a href="/shelters">Shelter List</a><li>
+    <li><a href="/residents">List of All Residents</a></li>
+  </ul>
+</head>
+
 <body>
+
   <p><h1><a href="/shelters">Shelter List</a></h1></p>
   <p><h1><a href="/residents">List of All Residents</a></h1></p>
 
@@ -14,3 +27,5 @@
 
   <p><a href="/shelters/<%= @shelter.id %>/residents/new">Add New Associated Resident</a></p>
 </body>
+
+</html>
