--- a/app/views/shelter_residents/sorted_a.html.erb
+++ b/app/views/shelter_residents/sorted_a.html.erb
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="mystyle.css"
+
+  <ul>
+    <li><a href="/">Welcome Page</a><li>
+    <li><a href="/shelters">Shelter List</a><li>
+    <li><a href="/residents">List of All Residents</a></li>
+  </ul>
+</head>
+
 <body>
 <p><h11><a href="/shelters">Shelter List</a></h11></p>
 <p><h11><a href="/residents">List of All Residents</a></h11></p>
@@ -17,3 +29,4 @@
 
 
 </body>
+</html>
