--- a/app/views/shelters/new.html.erb
+++ b/app/views/shelters/new.html.erb
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="mystyle.css"
+
+  <ul>
+    <li><a href="/">Welcome Page</a><li>
+    <li><a href="/shelters">Shelter List</a><li>
+    <li><a href="/residents">List of All Residents</a></li>
+  </ul>
+</head>
+
+<body>
+
+
 <form action="/shelters" method="post">
 <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 <h1>Enter a new shelter record:</h1>
@@ -12,5 +27,8 @@
 <input type='text' name='capasity'/><br/>
 <input type='submit'/>
 </form>
+
+</body>
+</html>
 
 
