--- a/app/views/shelters/new.html.erb
+++ b/app/views/shelters/new.html.erb
@@ -25,7 +25,7 @@
 
 <p>Capasity</p>
 <input type='text' name='capasity'/><br/>
-<input type='submit'/>
+<input type='submit' value='Submit New Shelter Record' name='Submit New Shelter Record'/>
 </form>
 
 </body>
