user story 12 testing update

--- a/app/views/shelters/edit.html.erb
+++ b/app/views/shelters/edit.html.erb
@@ -29,7 +29,7 @@
 
 <p>Capasity</p>
 <input type='text' name='capasity' value="<%= @shelter.capasity %>"/><br/>
-<input type='submit'/>
+<input type='submit' value='Update Shelter Record'/>
 </form>
 
 
