update user test 13 with updating testing

--- a/app/views/shelter_residents/new.html.erb
+++ b/app/views/shelter_residents/new.html.erb
@@ -22,7 +22,7 @@
 <p>Family Size</p>
 <input type='number' name='family_size'/><br/>
 <input type="hidden" name="shelter_id" value="<%= @shelter.id %>">
-<input type='submit'/>
+<input type='submit', value='Add New Resident Record'/>
 
 </form>
 </body>
