--- a/app/views/shelter_residents/index.html.erb
+++ b/app/views/shelter_residents/index.html.erb
@@ -12,7 +12,8 @@
 <body>
 
 
-  <h1><%=@shelter.shelter_name%> Residents</h1>
+<h1><%=@shelter.shelter_name%> Residents</h1>
+<p><h3><a href="/shelters/<%= @shelter.id %>/residents/new">Add New Associated Resident to This Shelter</a></h3></p>
     <p><h5><a href="/shelters/<%= @shelter.id %>/residents/sorted_a">Sort List Alphabetically</a></h5></p>
 
     <form action="/shelters/<%= @shelter.id %>/residents/by_family_view" method="post">
@@ -41,7 +42,6 @@
 <% end %>
 
 
-<p><h5><a href="/shelters/<%= @shelter.id %>/residents/new">Add New Associated Resident</a></h5></p>
 
 
 </body>
