update feature testing for user story 14

--- a/app/views/residents/edit.html.erb
+++ b/app/views/residents/edit.html.erb
@@ -24,7 +24,7 @@
 
 <p>Family Size</p>
 <input type name='family_size'value="<%= @resident.family_size %>"/><br/>
-<input type='submit'/>
+<input type='submit' value='Update Resident Record'/>
 
 
 </form>
