--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,13 @@
     <%= javascript_importmap_tags %>
   </head>
 
+  <ul>
+<li><a href="/">Welcome Page</a><li>
+<li><a href="/shelters">Shelter List</a><li>
+<li><a href="/residents">List of All Residents</a></li>
+</ul>
+
   <body>
-    <%= yield %>
+    <%= yield %> 
   </body>
 </html>
