--- a/app/views/shelter_residents/index.html.erb
+++ b/app/views/shelter_residents/index.html.erb
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
+  </header>
+
+  <body>
 
 
-<body>
-
-
-<h1><%=@shelter.shelter_name%> Residents</h1>
-<p><h3><a href="/shelters/<%= @shelter.id %>/residents/new">Add New Associated Resident to This Shelter</a></h3></p>
-    # <p><h5><a href="/shelters/<%= @shelter.id %>/residents/sorted_a">Sort List Alphabetically</a></h5></p>
-    <p><h5><a href="/shelters/<%= @shelter.id %>/residents?sorted=true">Sort List Alphabetically</a></h5></p>
+    <h1><%=@shelter.shelter_name%> Residents</h1>
+      <p><h3><a href="/shelters/<%= @shelter.id %>/residents/new">Add New Associated Resident to This Shelter</a></h3></p>
+      <p><h5><a href="/shelters/<%= @shelter.id %>/residents?sorted=true">Sort List Alphabetically</a></h5></p>
     
-
     <form action="/shelters/<%= @shelter.id %>/residents" method="get">
-    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-    <input type="hidden" name="sort" value="true">
-    <p>Filter by Family Size</p>
-    <p>Family Size</p>
-    <input type='number' name='family_size'/><br/>
-    <input type='submit' value='submit'/>
+      <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+      <input type="hidden" name="sort" value="true">
+      <p>Filter by Family Size</p>
+      <p>Family Size</p>
+      <input type='number' name='family_size'/><br/>
+      <input type='submit' value='submit'/>
     </form>
-
-
-    
-
-
 
 <% @residents.each do |resident| %>
   <h3><a href="/residents/<%= resident.id %>"><%= resident.family_name %></a>
@@ -39,9 +32,5 @@
   <p>Family Size: <%=resident.family_size%></p>
   <p>Current Shelter ID: <%=resident.shelter_id%></p>
 <% end %>
-
-
-
-
 </body>
 </html>
