--- a/app/views/residents/edit.html.erb
+++ b/app/views/residents/edit.html.erb
@@ -18,6 +18,16 @@
       <input type='submit' value='Update Resident Record'/>
     </form>
     
+    <%= form_with url: "/residents/#{@resident.id}", method: :patch, data: {turbo: false} do |form|
+    %>
+      <%= form.label :family_name %>
+      <%= form.text_field :family_name %>
+      <%= form.label :long_term_housing_need %>
+      <%= form.text_field :long_term_housing_need %>
+      <%= form.label :family_size %>
+      <%= form.text_field :family_size %>
+      <%= form.submit 'Update Resident Record' %>
+      <% end %>
 </body>
 </html>
 
